just playing with css and js

--- a/_layouts/secret.html
+++ b/_layouts/secret.html
@@ -1,16 +1,24 @@
 <!doctype html>
 <html lang="es">
-<head>
-<meta charset="utf-8">
-<title>secret</title>
-<link rel="stylesheet" href="/assets/css/firststyle.css">
-<script src="/assets/js/firstscript.js"></script>
-</head>
-<body>
-<div id="error" style="display: none;">ACCESS DENIED</div>
-# This entry is 'protected'.
-<pre>
-password: <span class="cursor">&#x2588;</span>
-</pre>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <title>secret</title>
+    <link rel="stylesheet" href="/assets/css/firststyle.css">
+    <script src="/assets/js/firstscript.js"></script>
+    <script>
+      fux = function() {
+        document.getElementById("pass").focus();
+      }
+    </script>
+  </head>
+  <body onmousemove=fux()>
+    <div id="error" style="display: none;">ACCESS DENIED</div>
+    <p>This entry is 'protected'.</p>
+    <form>
+      <pre>password: <input type="password" onkeydown="this.style.width = ((this.value.length)*14)+'px';"
+                  id="pass" onload=fux()
+        ><span class="cursor">&#x2588;</span></pre>
+    </form>
+    
+  </body>
 </html>
