--- a/_sass/frankenstein.scss
+++ b/_sass/frankenstein.scss
@@ -14,7 +14,9 @@ body {
   min-height: 100%;
 }
 
-.post-meta { text-align: right; }
+.post-meta { 
+  text-align: right;
+}
 
 h2, h3, h4, h5, h6 {
   margin-top: 3rem;
