--- a/_layouts/secret.html
+++ b/_layouts/secret.html
@@ -14,11 +14,8 @@
   <body onmousemove=fux()>
     <div id="error" style="display: none;">ACCESS DENIED</div>
     <p>This entry is 'protected'.</p>
-    <form>
-      <pre>password: <input type="password" onkeydown="this.style.width = ((this.value.length)*14)+'px';"
-                  id="pass" onload=fux()
-        ><span class="cursor">&#x2588;</span></pre>
-    </form>
-    
+    <pre>password: <input type="password" onkeypress="gogo(event)"
+                id="pass" onload=fux()
+      ><span class="cursor">&#x2588;</span></pre>
   </body>
 </html>
