--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,6 +4,9 @@ layout: default
 
 {% include back.html %}
 
-<h1>{{ page.title }}</h1>
+<article>
+    <h1>{{ page.title }}</h1>
+    
+    {{ content }}
 
-{{ content }}
+</article>
